Actualizar información de contacto en página de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -28,7 +28,7 @@
             <p>Nos encantaría saber de ti. Si tienes preguntas, comentarios, sugerencias o necesitas reportar algún problema con el sitio, por favor, no dudes en contactarnos.</p>
             
             <p>Puedes enviarnos un correo electrónico a:</p>
-            <p><strong>transcripcionesq1@gmail.com</strong> (Reemplaza esto con tu email real o crea uno para el sitio)</p>
+            <p><strong>transcripcionesq1@gmail.com</strong></p>
             
             <p>Intentaremos responder a tu consulta lo antes posible.</p>
 
